# chatbotsamirrasa

./: .dockerignore  .env.example  .env_defaut  .gitignore  .slugignore  Dockerfile.app  Makefile  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  stories.yml
api-app/: .env.example  .slugignore  Dockerfile.nlu-train  Dockerfile.rasa-train  Makefile  Procfile  README.md  SUPPORTED_COMMANDS.md  docker-compose.yml  pyproject.toml  requirements.txt
api-app/app/: config.py  main.py  models.py  tasks.py
api-app/app/application/: commands.py  dto.py  ports.py  validators.py
api-app/app/application/use_cases/: __init__.py  app_management.py
api-app/app/copilot/: __init__.py  composition.py  contracts.py
api-app/app/copilot/conversation/: __init__.py  connection_manager.py  websocket_handler.py
api-app/app/copilot/memory/: __init__.py  postgres_store.py  service.py
api-app/app/copilot/nlu/: __init__.py  adapter.py
api-app/app/copilot/orchestration/: __init__.py  async_engine.py  engine.py
api-app/app/copilot/orchestration/handlers/: __init__.py  addon_handlers.py  app_handlers.py  async_base.py  autoscaler_handlers.py  base.py  collaborator_handlers.py  confirm_handler.py  container_handlers.py  deployment_handlers.py  domain_handlers.py  env_var_handlers.py  event_handlers.py  log_drain_handlers.py  memory_handlers.py  notifier_handlers.py  one_off_handlers.py  platform_handlers.py  project_handlers.py  region_handlers.py
api-app/app/copilot/presentation/: ws_v2.py
api-app/app/copilot/scalingo_ops/: __init__.py  gateway.py
api-app/app/core/: __init__.py  composition.py  container.py  logging.py
api-app/app/domain/: __init__.py  errors.py  value_objects.py
api-app/app/exceptions/: __init__.py  custom_exceptions.py
api-app/app/handlers/: app_management_handlers.py  base_handler.py  deployment_handlers.py  utility_handlers.py  websocket_handler.py
api-app/app/infrastructure/: __init__.py
api-app/app/infrastructure/cache/: __init__.py  cache_entry.py  cache_manager.py
api-app/app/infrastructure/health/: __init__.py  health_checker.py  postgres_health.py  redis_health.py  scalingo_health.py
api-app/app/infrastructure/rasa/: __init__.py  client.py
api-app/app/infrastructure/scalingo/: __init__.py  apps_api.py  auth_token_provider.py  http_client.py
api-app/app/middleware/: __init__.py  auth_middleware.py  cache_middleware.py  error_handler.py  logging_middleware.py  rate_limit_middleware.py  security_middleware.py
api-app/app/presentation/: __init__.py  health.py  metrics.py  schemas.py
api-app/app/presentation/websocket/: __init__.py  app_management_intent_controller.py  messages.py
api-app/app/services/: __init__.py  deployment_service.py  health_service.py  logs_service.py  metrics_service.py
api-app/app/utils/: __init__.py  helpers.py  websocket_helpers.py
api-app/templates/: index.html
api-app/tests/: conftest.py
api-app/tests/integration/: test_apps_api.py
api-app/tests/unit/: test_app_management_intent_controller.py  test_cache_manager.py  test_composition_legacy_flag.py  test_connection_manager.py  test_health_service.py  test_metrics_service.py  test_middleware_simple.py  test_new_gateway_methods.py  test_scalingo_http_client.py  test_scalingo_ops_gateway.py  test_schemas.py  test_tasks_deployment_polling.py  test_v2_command_engine.py  test_websocket_handler_parsing.py
app/: config.py  main.py  models.py  tasks.py  (+1 more)
nlu-app/: Dockerfile  Procfile  README.md  data.nlu.yml  pyproject.toml
nlu-app/app/: main.py  nlu.py  schemas.py  settings.py
nlu-app/models/: metadata.json  model.joblib
nlu-app/models/intent/: config.json  model.safetensors  vocab.txt
nlu-app/models/ner/: config.json  model.safetensors  tokenizer.json  tokenizer_config.json
nlu-app/scripts/: train.py
nlu-app/tests/: test_nlu_api.py
(+46 files in other folders)
