[project]
name = "scalingoops-agent"
version = "0.3.0"
description = "ScalingoOps conversational agent built with FastAPI and Rasa"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "gunicorn",
  "websockets",
  "jinja2",
  "celery",
  "redis",
  "httpx",
  "python-dotenv",
  "torch==2.8.0+cpu; platform_system == 'Linux'",
  "rasa==3.6.21; platform_system == 'Linux'",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "pytest-cov>=4.0.0",
  "pytest-httpx>=0.21.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
