[project]
name = "scalingoops-api"
version = "0.3.0"
description = "ScalingoOps API and worker"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "websockets",
  "wsproto",
  "gunicorn",
  "jinja2",
  "celery",
  "redis",
  "psycopg[binary]",
  "httpx",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "pytest-cov>=4.0.0",
  "pytest-httpx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
