[project]
name = "chatbotsamir-nlu"
version = "0.1.0"
description = "Lightweight self-hosted NLU service compatible with Rasa /model/parse"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pyyaml",
  "spacy>=3.7,<4.0",
  "scikit-learn>=1.4,<2.0",
  "joblib>=1.3,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
