[project]
name = "chatbotsamir-nlu"
version = "0.1.0"
description = "Self-hosted Transformers NLU service compatible with Rasa /model/parse"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pyyaml",
  "transformers>=4.44,<5.0",
  "torch>=2.4,<3.0",
  "datasets>=2.20,<3.0",
  "evaluate>=0.4,<0.5",
  "seqeval>=1.2,<2.0",
  "accelerate>=1.7,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
